--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -7,7 +7,7 @@
 
   padding: 0 20px;
 
-  @include onLaptop {
+  @include onTablet {
     grid-template-columns: repeat(6, 1fr);
     padding: 0 36px;
     gap: 30px;
@@ -26,7 +26,7 @@
 
     margin-bottom: 40px;
 
-    @include onLaptop {
+    @include onTablet {
       grid-column: 1 / 2;
       flex-direction: column;
       justify-content: flex-start;
@@ -36,22 +36,45 @@
   &__logo {
     height: 72px;
 
-    @include onLaptop {
+    @include onTablet {
       margin-bottom: 62px;
     }
   }
 
   &__facebook {
-    width: 24px;
     margin-right: 26px;
+    display: inline-block;
 
-    @include onLaptop {
-      margin-right: 14px;
+    width: 24px;
+    height: 24px;
+
+    background-image: url(../images/facebook.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(130%);
+    }
+
+    @include onTablet {
+      margin-right: 8px;
     }
   }
 
   &__instagram {
+    display: inline-block;
     width: 24px;
+    height: 24px;
+
+    background-image: url(../images/instagram.svg);
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(130%);
+    }
   }
 
   &__title {
@@ -68,7 +91,7 @@
   &__work-time {
     grid-column: 1;
 
-    @include onLaptop {
+    @include onTablet {
       grid-column: 2 / 4;
       margin-bottom: 70px;
     }
@@ -100,7 +123,7 @@
     align-content: flex-start;
     justify-items: flex-start;
 
-    @include onLaptop {
+    @include onTablet {
       grid-column: 4 / 6;
     }
 
@@ -116,6 +139,14 @@
     line-height: 24px;
 
     color: $c-main-black;
+
+    box-sizing: border-box;
+    display: inline-block;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(105%);
+    }
   }
 
   &__scroll-up {
@@ -131,7 +162,7 @@
     width: 100%;
     background-color: #1a5a4c80;
 
-    @include onLaptop {
+    @include onTablet {
       grid-column: 2 / -2;
     }
 
@@ -151,7 +182,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    @include onLaptop {
+    @include onTablet {
 
       grid-column: 2 / 6;
     }
