--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -14,7 +14,7 @@
 
   padding: 0 20px 60px;
 
-  @include onLaptop {
+  @include onTablet {
     flex-direction: row;
     padding: 0 34px 36px;
     justify-content: space-between;
@@ -28,7 +28,7 @@
   &__design {
     margin-bottom: 10px;
 
-    @include onLaptop {
+    @include onTablet {
       margin-bottom: 0;
     }
   }
