--- a/src/styles/block/lecture.scss
+++ b/src/styles/block/lecture.scss
@@ -4,7 +4,7 @@
 
   align-items: center;
 
-  @include onLaptop {
+  @include onTablet {
     padding: 0 34px;
   }
 
@@ -41,7 +41,13 @@
 
     color: $c-main-black;
 
-    @include onLaptop {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(102%);
+    }
+
+    @include onTablet {
       font-size: 36px;
     }
   }
@@ -67,7 +73,7 @@
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
-    @include onLaptop {
+    @include onTablet {
       width: 570px;
       height: 204px;
 
