--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -2,7 +2,7 @@
   &__actual-events {
     margin-bottom: 100px;
 
-    @include onLaptop {
+    @include onTablet {
       margin-bottom: 88px;
     }
 
@@ -12,15 +12,15 @@
   }
 
   &__gallery {
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 
-    @include onLaptop {
-      margin-bottom: 92px;
+    @include onTablet {
+      margin-bottom: 72px;
     }
 
     @include onDesktop {
       margin: auto;
-      margin-bottom: 200px;
+      margin-bottom: 180px;
     }
   }
 
@@ -35,7 +35,7 @@
   &__contacts {
     margin-bottom: 80px;
 
-    @include onLaptop {
+    @include onTablet {
       margin-bottom: 120px;
     }
 
