--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -15,9 +15,14 @@
     position: absolute;
     top: -130%;
 
-    @include onLaptop {
-      max-width: $width-laptop;
-      left: calc(50vw - (#{$width-laptop} / 2));
+    @include onTablet {
+      max-width: $width-tablet;
+      left: calc(50vw - (#{$width-tablet} / 2));
+    }
+
+    @include onDesktop {
+      max-width: $width-desktop;
+      left: calc(50vw - (#{$width-desktop} / 2));
     }
   }
 
@@ -27,8 +32,8 @@
 
   &__body {
     width: 100vw;
-    @include onLaptop {
-      max-width: $width-laptop;
+    @include onTablet {
+      max-width: $width-tablet;
     }
 
     @include onDesktop {
