--- a/src/styles/block/show.scss
+++ b/src/styles/block/show.scss
@@ -2,7 +2,7 @@
   padding: 0 20px;
   margin-bottom: 60px;
 
-  @include onLaptop {
+  @include onTablet {
     padding: 0 34px;
     margin-bottom: 64px;
   }
@@ -26,8 +26,15 @@
     width: 100%;
     margin-bottom: 16px;
 
-    @include onLaptop {
+    transition: transform 0.3s, border-radius 0.2s;
+
+    @include onTablet {
       margin-bottom: 40px;
+    }
+
+    &:hover {
+      transform: scale(105%);
+      border-radius: 5%;
     }
   }
 
@@ -38,7 +45,7 @@
 
     margin-bottom: 10px;
 
-    @include onLaptop {
+    @include onTablet {
       margin-bottom: 30px;
       max-width: 220px;
     }
@@ -54,7 +61,7 @@
     color: $c-show-title;
     text-transform: uppercase;
 
-    @include onLaptop {
+    @include onTablet {
       font-size: 14px;
     }
   }
@@ -68,7 +75,7 @@
 
     color: $c-dark-green;
 
-    @include onLaptop {
+    @include onTablet {
       font-size: 14px;
     }
   }
@@ -84,7 +91,13 @@
 
     margin-bottom: 10px;
 
-    @include onLaptop {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(102%);
+    }
+
+    @include onTablet {
       font-size: 36px;
       margin-bottom: 15px;
     }
@@ -98,9 +111,9 @@
       width: 10px;
       height: 10px;
 
-      background-color: #f14a27;
+      background-color: $c-orange;
 
-      @include onLaptop {
+      @include onTablet {
         width: 15px;
         height: 15px;
       }
