--- a/src/styles/block/subscribe.scss
+++ b/src/styles/block/subscribe.scss
@@ -12,7 +12,7 @@
   background-position: center;
   background-size: cover;
 
-  @include onLaptop {
+  @include onTablet {
     background-image: url(../images/subscribe-laptop.png);
   }
 
@@ -27,7 +27,7 @@
 
     margin-bottom: 20px;
 
-    @include onLaptop {
+    @include onTablet {
       font-size: 48px;
       margin-bottom: 16px;
     }
@@ -45,7 +45,7 @@
 
     margin-bottom: 50px;
 
-    @include onLaptop {
+    @include onTablet {
       line-height: 18px;
       margin-bottom: 64px;
     }
@@ -74,7 +74,7 @@
     outline: none;
     border-color: transparent;
 
-    @include onLaptop {
+    @include onTablet {
       width: 374px;
       height: 70px;
       margin-right: 16px;
@@ -88,7 +88,7 @@
 
   &__button {
     box-sizing: border-box;
-    background-color: #f14a27;
+    background-color: $c-orange;
     height: 50px;
     width: 50px;
 
@@ -98,7 +98,7 @@
 
     transition: background-color 0.2s;
 
-    @include onLaptop {
+    @include onTablet {
       font-size: 25px;
       width: 70px;
       height: 70px;
