--- a/src/styles/block/title.scss
+++ b/src/styles/block/title.scss
@@ -7,7 +7,7 @@
   text-align: center;
   text-transform: uppercase;
 
-  @include onLaptop {
+  @include onTablet {
     font-size: 57px;
     line-height: 68px;
 
@@ -20,7 +20,7 @@
   }
 
   &__transparent {
-    @include onLaptop {
+    @include onTablet {
       -webkit-text-fill-color: transparent;
       -webkit-text-stroke: 2px $c-main-black;
     }
