--- a/src/styles/block/actual-events.scss
+++ b/src/styles/block/actual-events.scss
@@ -8,7 +8,7 @@
 
     margin-bottom: 40px;
 
-    @include onLaptop {
+    @include onTablet {
       font-size: 48px;
       margin: 0 0 48px 34px;
       text-align: left;
