--- a/src/styles/block/body.scss
+++ b/src/styles/block/body.scss
@@ -4,7 +4,7 @@
     grid-column-end: 3;
     margin-bottom: 70px;
 
-    @include onLaptop {
+    @include onTablet {
       margin-bottom: 88px;
     }
 
