--- a/src/styles/block/button.scss
+++ b/src/styles/block/button.scss
@@ -14,7 +14,19 @@
 
   color: $c-main-black;
 
-  @include onLaptop {
+  transition: transform 0.2s, background-color 0.3s;
+
+  &:hover {
+    background-color: rgba($c-dark-green, 0.1);
+    transform: scale(105%);
+  }
+
+  &:active {
+    background-color: rgba($c-dark-green, 0.3);
+    transform: scale(95%);
+  }
+
+  @include onTablet {
     width: 270px;
     height: 70px;
   }
@@ -39,7 +51,7 @@
     color: #d7dde3;
     font-weight: bold;
 
-    @include onLaptop {
+    @include onTablet {
       width: 70px;
       height: 68px;
     }
