--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -5,7 +5,7 @@
 
   padding: 0 0 0 20px;
 
-  @include onLaptop {
+  @include onTablet {
     padding: 0 0 0 34px;
   }
 
@@ -20,29 +20,30 @@
 
     color: $c-main-black;
 
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 
-    @include onLaptop {
+    @include onTablet {
       align-self: flex-start;
 
       font-size: 48px;
-      margin-bottom: 48px;
+      margin-bottom: 28px;
     }
 
     @include onDesktop {
-      margin: 0 0 56px 55px;
+      margin: 0 0 36px 55px;
     }
   }
 
   &__scroll {
     display: flex;
-
+    box-sizing: border-box;
+    padding: 20px;
     overflow-x: hidden;
     height: 410px;
 
     margin-bottom: 20px;
 
-    @include onLaptop {
+    @include onTablet {
       height: 544px;
       margin-bottom: 32px;
     }
@@ -54,19 +55,26 @@
       justify-content: center;
       align-self: center;
       gap: 20px;
+      margin-bottom: 0;
     }
   }
 
   &__img {
     margin-right: 16px;
 
-    @include onLaptop {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(105%);
+      z-index: 1;
+    }
+
+    @include onTablet {
       margin-right: 20px;
     }
 
     @include onDesktop {
       margin-right: 0;
-      // margin-bottom: 30px;
     }
   }
 
