--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -51,6 +51,14 @@
   }
 
   &__footer {
-    margin-bottom: 50px;
+    margin-bottom: 35px;
+
+    @include onTablet {
+      margin: 0 35px 35px;
+    }
+
+    @include onDesktop {
+      margin: 0 55px 35px;
+    }
   }
 }
