--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,6 +3,11 @@
     display: flex;
     flex-direction: column-reverse;
     text-align: center;
+
+    @include onTablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
 
   &__text {
