--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -37,9 +37,18 @@
     margin-bottom: 20px;
     box-sizing: border-box;
     width: 100%;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     &--3 {
       width: 100%;
+
+      &:hover {
+        transform: scale(1);
+      }
     }
   }
 
