--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -1,4 +1,5 @@
 .follow {
+
   &__container {
     background-image: url(../images/9.png);
     background-position: center;
@@ -61,7 +62,7 @@
     }
 
     &:focus {
-      border-color: #f14a27;
+      border-color: $cororOrange-focus;
       outline: none;
     }
 
@@ -78,6 +79,8 @@
     border: 0;
     padding: 0;
     margin: 0;
+
+    cursor: pointer;
 
     @include onTablet {
       margin-left: 16px;
