--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -21,7 +21,6 @@
       gap: 28px;
       max-width: 1280px;
       flex-wrap: wrap;
-      overflow: hidden;
       padding: 0 56px;
       margin-bottom: 0;
     }
@@ -46,6 +45,14 @@
       &:nth-child(2) {
         display: none;
       }
+    }
+
+    transition: transform 0.3s;
+
+    &:hover {
+
+      transform: scale(1.05);
+      z-index: 1;
     }
   }
 
