--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,7 @@
 
   &__list {
     margin: 0 0 48px;
-    padding: 0;
+    padding: 80px;
     list-style: none;
   }
 
@@ -26,18 +26,22 @@
     padding-bottom: 8px;
     border-bottom: 1px solid transparent;
 
-    color: #fff;
     text-decoration: none;
     font-weight: bold;
-    font-size: 22px;
-    line-height: 22px;
+    font-size: 32px;
+    line-height: 32px;
     letter-spacing: 2px;
     text-transform: uppercase;
+    color: rgb(255, 255, 255);
+    -webkit-text-stroke: 1px rgb(240, 233, 233);
+    -webkit-text-fill-color: rgba(0,0,0,0);
 
     transition: border-color 0.3s;
 
     &:hover {
-      border-color: #fff;
+      color: rgb(255, 255, 255);
+      -webkit-text-stroke: 1px rgb(240, 233, 233);
+      -webkit-text-fill-color: rgb(255, 255, 255);
     }
   }
 
