--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,12 +3,13 @@
 @import "typography";
 
 @import "./reset.scss";
+@import "./variables";
 @import "./normalize.scss";
 
 @import "./mixin";
-@import "./variables";
 
 @import "./blocks/page.scss";
+@import "./blocks/link.scss";
 @import "./blocks/header.scss";
 @import "./blocks/button.scss";
 @import "./blocks/top-actions.scss";
