--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -26,6 +26,14 @@
 
   &__item {
 
+    @for $start from 1 through 2 {
+      @for $end from $start through 2 {
+        &--mobile-#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+        }
+      }
+    }
+
     @include onTablet {
       @for $start from 1 through 6 {
         @for $end from $start through 6 {
