--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -29,7 +29,7 @@
     margin-bottom: 88px;
 
     &:last-child {
-      margin-bottom: 0;
+      margin-bottom: 48px;
     }
   }
 
@@ -44,6 +44,7 @@
 
     @include onTablet {
       text-align: start;
+      font-size: 48px;
       margin-bottom: 48px;
       padding: 0 40px;
     }
