--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/grid";
+@import "./blocks/logo-link";
+@import "./blocks/container";
+@import "./blocks/page";
+@import "./blocks/header";
+@import "./blocks/menu";
+@import "./blocks/events";
+@import "./blocks/link";
+@import "./blocks/subscribtion";
+@import "./blocks/gallery";
+@import "./blocks/slider";
+@import "./blocks/footer";
