--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,15 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin onTablet {
+  @media (min-width:768px) {
+    @content;
+  }
+}
+@mixin onDesktop {
+  @media (min-width:1280px) {
+    @content;
+  }
+}
+@mixin onMobile {
+  @media (min-width:320px) {
+    @content;
   }
 }
