last decor fix with links

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -107,6 +107,10 @@
   &__nav-link {
     text-decoration: none;
     color: black;
+
+    &:hover {
+      color: orange;
+    }
   }
 
   &__rights {
