--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -35,6 +35,11 @@
 
   &__image {
     display: none;
+    transition: transform 0.3s;
+    
+    &:hover {
+      transform: scale(1.06);
+    }
 
     &:last-child {
       display: block;
