--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -9,5 +9,21 @@
     font-size: 36px;
     line-height: 36px;
     text-align: center;
+
+    @include onTablet {
+      margin-bottom: 48px;
+
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
   }
 }
