--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,10 @@
 .gallery {
   margin-bottom: 40px;
 
+  @include onTablet {
+    margin-bottom: 32px;
+  }
+
   &__title {
     margin-bottom: 40px;
 
@@ -9,5 +13,21 @@
     font-size: 36px;
     line-height: 36px;
     text-align: center;
+
+    @include onTablet {
+      margin-bottom: 48px;
+
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
   }
 }
