--- a/src/styles/blocks/lections.scss
+++ b/src/styles/blocks/lections.scss
@@ -4,6 +4,14 @@
     position: relative;
     width: 100%;
     height: 210px;
+
+    @include onTablet {
+      height: 390px;
+    }
+
+    @include onDesktop {
+      height: 550px;
+    }
   }
 
   &__photo {
@@ -16,13 +24,23 @@
   }
 
   &__info-container {
-    margin-bottom: 60px;
+    margin: 0 20px 60px;
 
     position: relative;
     bottom: 60px;
     height: 140px;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: #fff;
     box-shadow: 0 2px 0 0 #1a5a4c40;
+
+    @include onTablet {
+      margin: 0 100px 28px;
+      height: 204px;
+    }
+
+    @include onDesktop {
+      margin: 0 355px 140px;
+      height: 204px;
+    }
   }
 
   &__type-n-date {
@@ -31,13 +49,20 @@
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+
+    font-size: 16px;
+
+    @include onTablet {
+      padding: 45px 0 24px;
+      font-size: 14px;
+    }
   }
 
   &__type {
     text-transform: uppercase;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
-    font-size: 16px;
+    font-size: inherit;
     line-height: 16px;
     color: #687480;
   }
@@ -45,7 +70,7 @@
   &__date {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 700;
-    font-size: 16px;
+    font-size: inherit;
     line-height: 24px;
     color: #1a5a4c;
   }
@@ -57,5 +82,15 @@
     font-weight: 400;
     line-height: 28px;
     text-align: center;
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 36px;
+    }
+
+    @include onDesktop {
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 }
