--- a/src/styles/blocks/button-tickets.scss
+++ b/src/styles/blocks/button-tickets.scss
@@ -1,38 +1,38 @@
-.button-tickets {
-  margin: 0 auto 70px;
-  display: flex;
-  border: 1px solid black;
-  width: 280px;
+// .button-tickets {
+//   margin: 0 auto 70px;
+//   display: flex;
+//   border: 1px solid black;
+//   width: 280px;
 
-  &__text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+//   &__text {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
 
-    width: 230px;
+//     width: 230px;
 
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 500;
-    color: #000;
-  }
+//     text-decoration: none;
+//     text-transform: uppercase;
+//     font-family: "IBM Plex Sans", sans-serif;
+//     font-size: 16px;
+//     line-height: 16px;
+//     font-weight: 500;
+//     color: #000;
+//   }
 
-  &__buy {
-    height: 50px;
-    width: 50px;
-    background-color: #1a5a4c;
+//   &__buy {
+//     height: 50px;
+//     width: 50px;
+//     background-color: #1a5a4c;
 
-    background-image: url(../images/Vector.png);
-    background-repeat: no-repeat;
-    background-position: center;
+//     background-image: url(../images/Vector.png);
+//     background-repeat: no-repeat;
+//     background-position: center;
 
-    transition: 0.3s;
+//     transition: 0.3s;
 
-    &:hover {
-      transform: rotate(90deg);
-    }
-  }
-}
+//     &:hover {
+//       transform: rotate(90deg);
+//     }
+//   }
+// }
