--- a/src/styles/blocks/exhibitions.scss
+++ b/src/styles/blocks/exhibitions.scss
@@ -1,38 +1,63 @@
 .exhibitions {
 
+  @include onDesktop {
+    display: grid;
+    justify-content: center;
+  }
+
   &__photo-container {
     margin-bottom: 20px;
 
-    // position: relative;
-    // width: 100%;
-    // height: 210px;
-
+    position: relative;
+    width: 100%;
     height: 210px;
-    background-image: url(../images/exhibitions__photo1.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
 
-    @media (min-width: 768px) {
+    @include onTablet {
+      width: 700px;
       height: 520px;
-      background-image: url(../images/768px.jpg);
+    }
+
+    @include onDesktop {
+      margin-bottom: 104px;
+
+      width: 670px;
+      height: 520px;
     }
   }
 
-  // &__photo {
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 100%;
+  &__photo {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
-  //   object-fit: contain;
-  //   object-position: center;
-  // }
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &__info-container {
+
+    @include onDesktop {
+      // padding-top: 50%;
+    }
+  }
 
   &__type-n-date {
     margin-bottom: 15px;
 
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
+
+    @include onTablet {
+      margin-bottom: 32px;
+      width: 220px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 32px;
+      justify-content: flex-start;
+      gap: 30px;
+    }
   }
 
   &__type {
@@ -42,6 +67,11 @@
     font-size: 16px;
     line-height: 16px;
     color: #687480;
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 14px;
+    }
   }
 
   &__date {
@@ -50,15 +80,27 @@
     font-size: 16px;
     line-height: 24px;
     color: #1a5a4c;
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 21px;
+    }
   }
 
   &__name {
     margin-bottom: 10px;
 
     font-family: "Montserrat", sans-serif;
-    font-size: 26px;
     font-weight: 400;
+    font-size: 26px;
     line-height: 28px;
+
+    @include onTablet {
+      margin-bottom: 15px;
+
+      font-size: 36px;
+      line-height: 36px;
+    }
 
     &::after {
       margin-bottom: 2px;
@@ -68,6 +110,11 @@
       width: 10px;
       height: 10px;
       background-color: #f14a27;
+
+      @include onTablet {
+        width: 15px;
+        height: 15px;
+      }
     }
   }
 
@@ -80,5 +127,9 @@
     line-height: 24px;
     text-align: left;
     color: #4e4e4e;
+
+    @include onTablet {
+      width: 460px;
+    }
   }
 }
