--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,14 +1,20 @@
 .subscription {
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 
   height: 386px;
   background-image: url(../images/subscription__photo.jpg);
+  background-position: center;
+  background-size: cover;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-content: center;
-
+  align-items: center;
   flex-wrap: wrap;
+
+  @include onDesktop {
+    height: 550px;
+  }
 
   &__title {
     padding-bottom: 20px;
@@ -20,11 +26,15 @@
     line-height: 36px;
     text-align: center;
     color: #fff;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 48px;
+    }
   }
 
   &__text {
-    padding-bottom: 50px;
-    width: 280px;
+    padding: 0 20px 50px;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
@@ -32,10 +42,27 @@
     line-height: 27px;
     text-align: center;
     color: #fff;
+
+    @include onTablet {
+      padding-bottom: 64px;
+    }
+
+    @include onDesktop {
+      padding-bottom: 72px;
+    }
   }
 
   &__form {
     display: flex;
+    border-radius: 0;
+
+    @include onTablet {
+      gap: 16px;
+    }
+
+    @include onDesktop {
+      gap: 30px;
+    }
   }
 
   &__input {
@@ -49,10 +76,21 @@
     line-height: 14px;
     text-align: left;
     outline: none;
+
+    @include onTablet {
+      width: 374px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      padding-left: 32px;
+      width: 470px;
+      height: 70px;
+    }
   }
 
   &__button {
-    background-image: url(../images/black-vector.png);
+    background-image: url(../images/black__button.svg);
     background-repeat: no-repeat;
     background-position: center;
 
@@ -60,5 +98,16 @@
     height: 50px;
     background-color: #f14a27;
     border: none;
+    cursor: pointer;
+
+    @include onTablet {
+      width: 70px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      width: 70px;
+      height: 70px;
+    }
   }
 }
