--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,7 @@
   font-family: "IBM Plex Sans", "Montserrat", sans-serif;
   font-weight: normal;
   scroll-behavior: smooth;
+  // just try
 
   &__header {
     @include onTablet {
