--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -9,6 +9,7 @@
 
   &-2 {
     background-color: #f14a27;
+    transition: background-color 0.3s;
 
     &:hover {
       background-color: #cf2f0f;
