--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -57,12 +57,14 @@
       color: #687480;
     }
 
+    transition: border-color 0.3s;
+
     &:hover {
       border: 2px solid #687480;
     }
 
     &:focus {
-      border-color: $cororOrange-focus;
+      border-color: $colorGreen;
       outline: none;
     }
 
