--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -131,7 +131,7 @@
       box-sizing: border-box;
       width: 280px;
       margin: 0 20px;
-      padding: 20px 0;
+      padding: 20px 4px;
       background-color: #fff;
       transform: translateY(-100px);
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
