--- a/src/styles/blocks/link.scss
+++ b/src/styles/blocks/link.scss
@@ -1,8 +1,9 @@
 .link {
   text-decoration: none;
   color: $colorSemi-black;
+  transition: color 0.3s;
 
   &:hover {
-    color: $cororOrange-focus;
+    color: $colorOrange-focus;
   }
 }
