--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,9 +2,12 @@
   font-family: "IBM Plex Sans", "Montserrat", sans-serif;
   font-weight: normal;
   scroll-behavior: smooth;
-  position: relative;
-  max-width: 1260px;
-  margin: 0 auto;
+
+  @include onDesktop {
+    position: relative;
+    max-width: 1260px;
+    margin: 0 auto;
+  }
 
   &__header {
     @include onTablet {
