--- a/src/styles/blocks/exhibitions.scss
+++ b/src/styles/blocks/exhibitions.scss
@@ -34,12 +34,12 @@
     object-position: center;
   }
 
-  &__info-container {
+  // &__info-container {
 
-    @include onDesktop {
-      // padding-top: 50%;
-    }
-  }
+  //   @include onDesktop {
+
+  //   }
+  // }
 
   &__type-n-date {
     margin-bottom: 15px;
