--- a/src/styles/blocks/photo-collection.scss
+++ b/src/styles/blocks/photo-collection.scss
@@ -35,7 +35,7 @@
   &__photo {
     width: 280px;
     height: 410px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 
     @include onTablet {
       width: 340px;
@@ -46,22 +46,28 @@
       display: none;
 
       @include onTablet {
+        width: 340px;
+        height: 543px;
         display: block;
       }
+    }
+
+    &--2 {
+      display: none;
+    }
+
+    &--3 {
+      display: none;
+    }
+
+    &--4 {
+      display: none;
     }
 
     @include onDesktop {
       display: grid;
       width: auto;
       height: auto;
-    }
-  }
-
-  &__photo:nth-child(n + 2) {
-    display: none;
-
-    @include onDesktop {
-      display: block;
     }
   }
 
