--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -12,9 +12,9 @@
 
   &__menu-button {
     position: absolute;
-    top: 15px;
-
     display: block;
+    top: 33px;
+    margin-left: 23px;
 
     width: 18px;
     height: 12px;
@@ -22,18 +22,19 @@
     background-image: url(../images/menu__button.svg);
 
     @include onTablet {
-      top: 34px;
+      top: 45px;
+      margin-left: 0;
     }
 
     @include onDesktop {
-      top: 46px;
+      top: 45px;
+      margin-left: 0;
     }
   }
 
   &__photo {
     margin-bottom: 20px;
 
-    display: block;
     width: 100%;
     height: 100%;
 
@@ -69,7 +70,7 @@
     font-size: 45px;
     line-height: 45px;
     text-transform: uppercase;
-    text-align: left;
+    text-align: center;
 
     @include onTablet {
       width: min-content;
