--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -21,6 +21,12 @@
     line-height: 100%;
     color: #0f0e08;
     text-transform: uppercase;
+    transition: color 0.3s, background-color 0.3s;
+  }
+
+  &--buy:hover .button__field {
+    color: #fff;
+    background-color: #0d3028;
   }
 
   &__icon {
