--- a/src/styles/blocks/left-side-mark.scss
+++ b/src/styles/blocks/left-side-mark.scss
@@ -6,6 +6,7 @@
   transform-origin: top left;
   transform: rotate(-90deg);
   width: fit-content;
+  text-decoration: none;
 
   @include onDesktop {
     display: flex;
@@ -20,6 +21,7 @@
 
   &__text {
     margin-left: 20px;
+
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: bold;
     font-size: 14px;
