--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -40,7 +40,16 @@
     }
   }
 
+  &__socials-icons {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.3);
+    }
+  }
+
   &__schedule-n-contacts {
+    position: relative;
     margin: 0 auto;
 
     margin-bottom: 40px;
@@ -51,12 +60,17 @@
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
     @include onTablet {
+      position: static;
       margin-bottom: 64px;
     }
 
     @include onDesktop {
+      position: static;
       margin-bottom: 88px;
       margin-right: 65px;
+
+      justify-content: flex-start;
+      gap: 32px;
 
       border-bottom: 0;
       border-right: 1px solid rgba(26, 90, 76, 0.5);
@@ -79,6 +93,7 @@
 
     @include onDesktop {
       margin-bottom: 0;
+      width: 170px;
     }
   }
 
@@ -93,6 +108,10 @@
     text-align: left;
 
     @include onTablet {
+      display: inline;
+    }
+
+    @include onDesktop {
       display: inline;
     }
   }
@@ -111,7 +130,16 @@
     }
 
     @include onDesktop {
-      margin-right: 65px;
+      width: 175px;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
+    color: #000;
+
+    &:hover {
+      color: #f14a27;
     }
   }
 
