--- a/src/styles/blocks/lections.scss
+++ b/src/styles/blocks/lections.scss
@@ -89,8 +89,12 @@
     }
 
     @include onDesktop {
+      margin: 0 auto;
+      width: 370px;
+
       font-size: 36px;
       line-height: 36px;
+      text-align: center;
     }
   }
 }
