--- a/src/styles/blocks/exhibitions.scss
+++ b/src/styles/blocks/exhibitions.scss
@@ -5,6 +5,24 @@
     justify-content: center;
   }
 
+  &__container {
+
+    @include onDesktop {
+      display: flex;
+      gap: 130px;
+    }
+  }
+
+  &__info-container {
+
+    @include onDesktop {
+      width: 370px;
+      align-self: center;
+      order: 1;
+    }
+
+  }
+
   &__photo-container {
     margin-bottom: 20px;
 
@@ -22,6 +40,14 @@
 
       width: 670px;
       height: 520px;
+
+      &--first {
+        order: 0;
+      }
+
+      &--second {
+        order: 2;
+      }
     }
   }
 
@@ -33,13 +59,6 @@
     object-fit: cover;
     object-position: center;
   }
-
-  // &__info-container {
-
-  //   @include onDesktop {
-
-  //   }
-  // }
 
   &__type-n-date {
     margin-bottom: 15px;
