--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/_reset.scss";
+@import "./utils/_normalize";
 @import "./utils/_mixins";
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
@@ -9,7 +10,7 @@
 @import "./blocks/current-events.scss";
 @import "./blocks/events.scss";
 @import "./blocks/grid.scss";
-@import "./blocks/wraper.scss";
+@import "./blocks/wrapper.scss";
 @import "./blocks/classicism.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscribe.scss";
