--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -63,6 +63,7 @@
     align-items: center;
     text-align: left;
     padding-left: 24px;
+    outline: none;
 
     @include onTablet {
       height: 70px;
