--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,21 @@
   box-sizing: border-box;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid $c-gray;
+  -webkit-text-fill-color: $c-gray;
+  -webkit-box-shadow: 0 0 0 1000px #fff inset;
+  transition: background-color 1s ease-in-out 0s;
+}
+
 .page {
   max-width: 1280px;
   margin: 0 auto;
