--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -28,10 +28,17 @@
     max-height: 520px;
     margin: 0 0 20px;
 
+    transition: transform 0.3s;
+
     @include onTablet {
       height: 520px;
       order: 1;
       margin-bottom: 44px;
+    }
+
+    &:hover {
+      transform: scale(1.3);
+      z-index: 1;
     }
   }
 
