fix with auto-fill and new idea with header

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -17,7 +17,25 @@
     }
 
     @include onDesktop {
-      left: 555px;
+      display: none;
+    }
+  }
+
+  &__reserve-background {
+    display: none;
+    background-image: url(../images/desktop/reserve/header_reserve.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    padding-left: 4%;
+    width: 100%;
+    height: 100%;
+
+    @include onDesktop {
+      display: block;
     }
   }
 
@@ -25,6 +43,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px 0;
+    position: relative;
 
     @include onTablet {
       display: grid;
