--- a/src/styles/blocks/subscribtion.scss
+++ b/src/styles/blocks/subscribtion.scss
@@ -95,6 +95,17 @@
     &:focus {
       outline: none;
     }
+
+    &:-webkit-autofill::first-line,
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+      border: none;
+      -webkit-text-fill-color: black;
+      -webkit-box-shadow: 0 0 0 1000px #fff inset;
+      transition: background-color 5000s ease-in-out 0s;
+    }
   }
 
   &__input-container {
