--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -137,6 +137,10 @@
   &__nav-link {
     color: #0f0e08;
     text-decoration: none;
+
+    &:hover {
+      box-shadow: 7px 9px 8px 3px rgba(57, 60, 62, 0.2);
+    }
   }
 
   &__nav-item {
