--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -26,5 +26,9 @@
     font-weight: 500;
     font-size: 25px;
     color: #1a5a4c;
+
+    &:hover {
+      box-shadow: 7px 9px 8px 3px rgba(57, 60, 62, 0.2);
+    }
   }
 }
