--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -4,6 +4,7 @@
   &__photo {
     width: 100%;
     z-index: -1;
+    max-height: 550px;
   }
 
   &__container {
@@ -14,7 +15,7 @@
 
   &__info {
     margin: 0 auto;
-    // padding: 0 10px;
+    padding: 0 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
